8 hours of fixes and features
Slightly less suck, a lot more useful.

--- a/data/session.properties
+++ b/data/session.properties
@@ -3,15 +3,24 @@
 # session.logFilePath = C:/Users/your_username/AppData/Local/plover/plover/plover.log
 
 # Lesson name
-session.lessonName = learn_plover_1-1
+session.lessonName = common_words
 
 # Word dictation. If you enable this, you may also want to disable
 # other sounds, by setting "session.isSoundEnabled = false" below,
 # though starting from version 0.1.4 sounds don't overlap anymore.
 session.isWordDictationEnabled = false
 
-# Base words at the beginning of the session
+# length of a single session in whole minutes (set to zero to disable timeboxing)
+session.timebox = 15
+
+# Base words at the beginning of the lesson (and after resetting it)
 session.startBaseWords = 5
+
+# Number of words unlocked at the beginning of the next session
+session.unlockedWords = 51
+
+#Starting level at the beginning of the session
+session.startLevel = 10
 
 # Increment words at each new level
 session.incrementWords = 5
