first commit to testing branch
a lot of refactor and new code, still broken and largely untested

--- a/data/session.properties
+++ b/data/session.properties
@@ -3,7 +3,7 @@
 # session.logFilePath = C:/Users/your_username/AppData/Local/plover/plover/plover.log
 
 # Lesson name
-session.lessonName = common_words
+session.lessonName = pride_and_prejudice
 
 # Word dictation. If you enable this, you may also want to disable
 # other sounds, by setting "session.isSoundEnabled = false" below,
@@ -17,20 +17,20 @@ session.timebox = 15
 session.startBaseWords = 5
 
 # Number of words unlocked at the beginning of the next session
-session.unlockedWords = 51
+session.unlockedWords = 15
 
 #Starting level at the beginning of the session
-session.startLevel = 10
+session.startLevel = 4
 
 # Increment words at each new level
 session.incrementWords = 5
 
 # Required last-x-average WPM for each word for leveling up,
 # where x = session.wordAvgSamples
-session.minLevelUpWordWpm = 10
+session.minLevelUpWordWpm = 70
 
-# Required average WPM for leveling up
-session.minLevelUpTotalWpm = 15
+# Required average WPM (over all words and time for current session)for leveling up
+session.minLevelUpTotalWpm = 80
 
 # Samples used for single word wpm average calculation
 session.wordAvgSamples = 7
